--- a/guidelinesWP/index.Rmd
+++ b/guidelinesWP/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Title Here (*Latin Species Name*)"
+title: "Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units"
 author: |
   First. M. Last^1^ and
   Alex B. Smith^2^
@@ -11,10 +11,10 @@ address: |
   ^2^Far, far away\
      Another Galaxy
 month: Month # fill in
-year: 2019
+year: 2021
 report_number: nnn
 region: Pacific Region
-citation_other_language: "Last, F.M. et Smith, A.B. Title Here (*Latin Species Name*). DFO Secr. can. de consult. sci. du MPO. Doc. de rech 2019/nnn. iv + 13 p."
+citation_other_language: "Last, F.M. et Smith, A.B. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. DFO Secr. can. de consult. sci. du MPO. Doc. de rech 2021/nnn. iv + 13 p."
 abstract: |
   Here is the abstract text. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
@@ -26,6 +26,7 @@ output:
    copy_sty: true
    line_nums: true
    line_nums_mod: 1
+   lot_lof: false
 # ------------
 # End of options to set
 knit: bookdown::render_book
